# streamlit-profiler

./: README.md  pyproject.toml
examples/: basic.py  requirements.txt
streamlit_profiler/: __init__.py
